--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,10 +15,8 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  ubuntu-latest:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 21
@@ -29,5 +27,52 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: Pacjage application
-      run: ./build.sh
+    - name: Package application
+      run: sh ./build.sh
+    - name: "Upload Package Artifact"
+      uses: actions/upload-artifact@v3
+      with:
+        name: ur-package-ubuntu
+        path: |
+          output/*.pkg
+          output/*.deb
+  windows-latest:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+      - name: Package application
+        run: ./build.bat
+      - name: "Upload Package Artifact"
+        uses: actions/upload-artifact@v3
+        with:
+          name: ur-package-windows
+          path: |
+            output/*.exe
+  macos-latest:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+      - name: Package application
+        run: sh ./build.sh
+      - name: "Upload Package Artifact"
+        uses: actions/upload-artifact@v3
+        with:
+          name: ur-package-windows
+          path: |
+            output/*.pkg
