--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -76,3 +76,23 @@ jobs:
           name: ur-package-macos
           path: |
             output/*.pkg
+  macos-latest-large:
+    runs-on: macos-latest-large
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+      - name: Package application
+        run: sh ./build.sh
+      - name: "Upload Package Artifact"
+        uses: actions/upload-artifact@v3
+        with:
+          name: ur-package-macos-amd64
+          path: |
+            output/*.pkg
