intel runnen latest large does not run with free account macos-13 is used in this commit

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -76,8 +76,8 @@ jobs:
           name: ur-package-macos
           path: |
             output/*.pkg
-  macos-latest-large:
-    runs-on: macos-latest-large
+  macos-13:
+    runs-on: macos-13
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 21
