--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,7 +18,7 @@ jobs:
   ubuntu-latest:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@vv4
+    - uses: actions/checkout@v4
     - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
@@ -39,7 +39,7 @@ jobs:
   windows-latest:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@vv4
+      - uses: actions/checkout@v4
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
@@ -59,7 +59,7 @@ jobs:
   macos-latest:
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@vv4
+      - uses: actions/checkout@v4
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
@@ -79,7 +79,7 @@ jobs:
   macos-13:
     runs-on: macos-13
     steps:
-      - uses: actions/checkout@vv4
+      - uses: actions/checkout@v4
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
